--- a/TimeSeriesAnalysis&Forecasting/readme
+++ b/TimeSeriesAnalysis&Forecasting/readme
@@ -1,1 +1,2 @@
-Đây là một dự án của học phần Phân tích dãy số thời gian và dự báo (DUE). Dự án tập trung phân tích các chỉ số thời vụ và mô hình hồi quy hàm xu thế,.. đối với 10 công ty được chọn ngẫu nhiên bằng Excel và Eviews.  
+Đây là một dự án của học phần Phân tích dãy số thời gian và dự báo (DUE). 
+Dự án tập trung phân tích các chỉ số thời vụ và mô hình hồi quy hàm xu thế,.. đối với 10 công ty được chọn ngẫu nhiên sử dụng công cụ Excel và Eviews.  
