--- a/OlistCustomer(Tableau)/readme
+++ b/OlistCustomer(Tableau)/readme
@@ -1,1 +1,2 @@
-
+Đây là một đề án nhỏ của mình ở trường đại học. Đề án phân tích cơ bản tổng quan tình hình khách hàng, customer segmentation (RFM)
+sử dụng bộ dữ liệu về cửa hàng Olist - một doanh nghiệp thương mại điện tử lớn có trụ sở tại Sao Paulo, Brazil. 
